# Assembly-Language-Analyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  aarch64_instructions.json  aarch64_instructions.rs  深入机器之心：从汇编语言到现代编译器生态的完整旅程.md
examples/: arithmetic.s  debug_db.rs  loop.s  memory.s  show_instructions.rs  test_end_to_end.rs  test_format.rs  test_lookup.rs  test_new_instructions.rs  test_objdump.rs  test_parser.rs  test_real_dump.rs  test_semantic.rs
src/: error.rs  instruction.rs  instruction_db.rs  lib.rs  main.rs  objdump.rs  parser.rs  register.rs  semantic.rs  table.rs
