[package]
name = "alaz"
version = "0.1.1"
edition = "2021"
authors = ["xjz"]
description = "AArch64 汇编语言分析工具 - 支持237条指令、多优化级别对比、智能语义解释"
license = "MIT"
repository = "https://github.com/xjz6626/Assembly-Language-Analyzer"
homepage = "https://github.com/xjz6626/Assembly-Language-Analyzer"
documentation = "https://docs.rs/alaz"
readme = "README.md"
keywords = ["aarch64", "arm", "assembly", "objdump", "analyzer"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]
exclude = [
    "target/*",
    "examples/*.dump",
    "test_dumps/*",
    "*.o",
    "*.md",
    "!README.md",
]

[[bin]]
name = "alaz"
path = "src/main.rs"

[lib]
name = "alaz"
path = "src/lib.rs"

[dependencies]
# 错误处理
anyhow = "1.0"
thiserror = "2.0.17"

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 颜色输出
colored = "3.0.0"

# 正则表达式
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
